--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </a><a rel="me" href="" title="Twitter">
                     <span class="fab fa-twitter"></span>
                 </a></div><div class="footer">
-    <a href='https://beniscome.github.io/'><h3>岁月无痕，开始漫游</h3></a> 
+    <a href='/content/home.html'><h3>岁月无痕，开始漫游</h3></a> 
 </div></div>
 </main>
 
