--- a/content/home.html
+++ b/content/home.html
@@ -11,6 +11,6 @@
  <style>
  </style>
  <body>
-<p style="line-height:30px;text-align:center"><b>春日   宋代-朱熹</b><br>胜日寻芳泗水滨，无边光景一时新。<br>等闲识得东风面，万紫千红总是春。</p>
+<p style="line-height:50px;text-align:center;font-size:28px;font-family:'楷体'"><b>春日   宋代-朱熹</b><br>胜日寻芳泗水滨，无边光景一时新。<br>等闲识得东风面，万紫千红总是春。</p>
  </body>
 </html>
