--- a/content/home.html
+++ b/content/home.html
@@ -9,8 +9,222 @@
   <title>诗酒趁年华</title>
  </head>
  <style>
+  *{
+  text-align:center;
+  }
  </style>
  <body>
 <p style="line-height:50px;text-align:center;font-size:28px;font-family:'楷体'"><b>春日   宋代-朱熹</b><br>胜日寻芳泗水滨，无边光景一时新。<br>等闲识得东风面，万紫千红总是春。</p>
+  
+<h2> 盛夏光年 用文字记录那时那刻的心情</h2>
+<pre>
+我用文字记录这个盛夏的自己,只为多年以后,给记忆一条回家的路。
+
+——写在前面
+
+文/念安
+
+关于现在
+
+夏日的雨是毫无预兆的
+
+雨水模糊了奔跑着的少年的视线
+
+在无数个像现在这样的夜晚里
+
+他不断地奔跑着
+
+他喜欢这样的追逐
+
+直到精疲力竭
+
+或许只有这样彻底的发泄
+
+那些忧伤才会消停片刻
+
+关于朋友
+
+曾几何时朋友就像救命稻草
+
+在你最危急的时候伸出双手
+
+我不知道从何时起
+
+朋友也渐渐与利益沾边
+
+世界没有变
+
+变的只有我们
+
+有时候我们总希望朋友能主动联系自己
+
+却不曾想久未联系的朋友说借我点钱吧
+
+常常在问了一句何时放假后便再也没有多余的话语
+
+我们常常只能用恩饿额草草结束那刻的尴尬
+
+也许是时间在帮我们作抉择吧
+
+将那些所谓的朋友生生隔开
+
+而我依旧很庆幸
+
+总有那么几个人
+
+他们懂我的喜怒哀乐
+
+他们给我恰当的温度
+
+他们不会轻易放弃我
+
+关于旅行
+
+我们总在想
+
+何时去海边看潮起潮落
+
+何时去西藏看布达拉宫
+
+失落时
+
+我们甚至于想买一张火车票
+
+一个人漫无目的地去旅行
+
+我们或多或少会有这样的情愫
+
+我们在心里构想那个远方的目的地
+
+我们把此时此地的不满寄托于彼地
+
+所以我们喜欢旅行
+
+背着包带着相机
+
+就像摆脱了阴霾
+
+义无反顾地离开
+
+关于爱情
+
+正如好多年前的现在
+
+彼此站在初夏盛大的光年里
+
+日光倾城
+
+却留下一个并不温暖的夏尾
+
+年华曾是浓墨重彩的油画
+
+如今早已被岁月风干沾染风尘
+
+青春是一树一树的花开
+
+那是我们最美好的时光
+
+徐志摩说
+
+一生至少该有一次
+
+为了某个人而忘了自己
+
+不求有结果 不求同行
+
+不求曾经拥有 甚至不求你爱我
+
+只求在我最美的年华里
+
+遇到你
+
+那么我是应该庆幸的
+
+待到夏花灿烂时
+
+你就在那里
+
+笑靥如花
+
+我不奢望一场轰轰烈烈的爱情
+
+我只想谈一场一辈子的亲情
+
+我不求与你海枯石烂
+
+只求陪伴你生老病死
+
+我在构想未来的你
+
+你该是一个明媚的女子像葵花一样干净
+
+你该是一个淡妆的女子像荷花一样自爱
+
+你可以讨厌穿高跟鞋
+
+我会买很多三叶草的平底鞋
+
+你可以有点小小脾气
+
+我确定我是一个好脾气的人
+
+你可以选择素面朝天
+
+我很愿意面对最最真实的你
+
+我不求佛 不求主
+
+只求今生遇见你
+
+即便不在最美的年华里
+
+你若不倾城 不倾国
+
+只愿倾其所有过想要的生活
+
+我便执子之手
+
+与子偕老
+
+关于遐思
+
+每当听到《左边》总会想起米莱
+
+每当听到《滴答》总会想起林夏
+
+每当看到《左耳》总会想起吧啦
+
+她们都是这样的女子
+
+为了爱可以舍弃自己
+
+她们成就了别人却没有成就自己
+
+她们真的快乐么
+
+关于未来
+
+我从不奢求富丽堂皇的生活
+
+我想我会有平淡如水的生活
+
+偶尔泛起些许波纹
+
+我会有一辆奥迪爱车
+
+我会有一块80平米的私人空间
+
+我会收集所有款式的AJ球鞋
+
+然后买一个柜子陈列在那里
+
+那时的我依旧不会抽烟
+
+偶尔会喝一点红酒假装陶醉
+
+那时的我依旧会写文字
+
+用文字记录那时那刻的心情
+</pre>
  </body>
 </html>
