--- a/content/home.html
+++ b/content/home.html
@@ -9,16 +9,18 @@
   <title>诗酒趁年华</title>
  </head>
  <style>
-  *{
-    text-align:center;
-    font-size:15px
+  pre{
+  text-align:center;
+  font-size:15px
   }
  </style>
  <body>
 <p style="line-height:50px;text-align:center;font-size:28px;font-family:'楷体'"><b>春日   宋代-朱熹</b><br>胜日寻芳泗水滨，无边光景一时新。<br>等闲识得东风面，万紫千红总是春。</p>
-  
-<h2> 盛夏光年 用文字记录那时那刻的心情</h2>
+ 
+ <br/> 
+<h2 align="center"> 盛夏光年 用文字记录那时那刻的心情</h2>
 <pre>
+
 我用文字记录这个盛夏的自己,只为多年以后,给记忆一条回家的路。
 
 ——写在前面
