--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style>
         body {
-            background: url('https://beniscome.github.io/images/background.jpg');
+            background: url('https://beniscome.github.io/images/background.jpg') no-repeat; background-size:100% 100%; background-attachment:fixed;
         }    
     </style>
 
